<?xml version="1.0" encoding="utf-8"?>	
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical"
    android:background="#ffffff">	
	
	<RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_marginTop="10sp"
	    >
	    <TextView 
	        android:id="@+id/now_acount"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/now_acount"
	        android:layout_centerHorizontal="true"
	        android:singleLine="true"
	        />
	    <TableLayout 
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:padding="10px"
	        android:layout_marginTop="10sp"
	        >
	        <TableRow 
	            android:layout_width="fill_parent"
	            android:layout_weight="1"
	            >
	            <LinearLayout 
	                android:layout_height="fill_parent"
	                android:layout_weight="1"
	                android:paddingTop="10dp"
	                android:gravity="center_horizontal"
	                >
	                <Button
				        android:id="@+id/start_rate"
				        android:layout_marginTop="4dp"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:background="@drawable/btn_menu_selector"
				        android:drawableTop="@drawable/rateico"
				        android:text="@string/start_heart_rate"
				        android:textSize="16sp"
				        android:textColor="#000000"
				        android:paddingLeft="5dp"
				        android:paddingTop="20dp"
				        android:paddingRight="5dp"
				        android:paddingBottom="5dp"/>
	
	                <Button
	                    android:id="@+id/personal_info"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_marginTop="4dp"
	                    android:layout_marginLeft="15dp"
	                    android:background="@drawable/btn_menu_selector"
	                    android:drawableTop="@drawable/user"
	                    android:paddingBottom="5dp"
	                    android:paddingLeft="5dp"
	                    android:paddingRight="5dp"
	                    android:paddingTop="20dp"
	                    android:text="@string/personal_info"
	                    android:textColor="#000000"
	                    android:textSize="16sp" />
	            </LinearLayout>
	        </TableRow>
	         <TableRow 
	            android:layout_width="fill_parent"
	            android:layout_weight="1"
	            >
	            <LinearLayout 
	                android:layout_height="fill_parent"
	                android:layout_weight="1"
	                android:paddingTop="10dp"
	                android:gravity="center_horizontal"
	                >
	                <Button
				        android:id="@+id/history"
				        android:layout_marginTop="4dp"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:background="@drawable/btn_menu_selector"
				        android:drawableTop="@drawable/history"
				        android:text="@string/history"
				        android:textSize="16sp"
				        android:textColor="#000000"
				        android:paddingLeft="5dp"
				        android:paddingTop="20dp"
				        android:paddingRight="5dp"
				        android:paddingBottom="5dp"/>
		              <Button
				        android:id="@+id/chart"
				        android:layout_marginTop="4dp"
				        android:layout_marginLeft="15dp"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:background="@drawable/btn_menu_selector"
				        android:drawableTop="@drawable/chart"
				        android:text="@string/chart"
				        android:textSize="16sp"
				        android:textColor="#000000"
				        android:paddingLeft="5dp"
				        android:paddingTop="20dp"
				        android:paddingRight="5dp"
				        android:paddingBottom="5dp"/>
	            </LinearLayout>
	        </TableRow>
	        <TableRow 
	            android:layout_width="fill_parent"
	            android:layout_weight="1"
	            >
	            <LinearLayout 
	                android:layout_height="fill_parent"
	                android:layout_weight="1"
	                android:paddingTop="10dp"
	                android:gravity="center_horizontal"
	                >
	                <Button
				        android:id="@+id/free"
				        android:layout_marginTop="4dp"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:background="@drawable/btn_menu_selector"
				        android:drawableTop="@drawable/free"
				        android:text="@string/free"
				        android:textSize="16sp"
				        android:textColor="#000000"
				        android:paddingLeft="5dp"
				        android:paddingTop="20dp"
				        android:paddingRight="5dp"
				        android:paddingBottom="5dp"/>
		              <Button
				        android:id="@+id/setting"
				        android:layout_marginTop="4dp"
				        android:layout_marginLeft="15dp"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:background="@drawable/btn_menu_selector"
				        android:drawableTop="@drawable/setting"
				        android:text="@string/setting"
				        android:textSize="16sp"
				        android:textColor="#000000"
				        android:paddingLeft="5dp"
				        android:paddingTop="20dp"
				        android:paddingRight="5dp"
				        android:paddingBottom="5dp"/>
	            </LinearLayout>
	        </TableRow>
	    </TableLayout>
	</RelativeLayout>
</ScrollView>